test/inference/good/typeclass_predicate_annotations.mlt
type 'a option = None | Some of 'a

class H 'a { h : 'a -> int }
instance H int { h = fun x -> x }

instance ['a] H 'a => H (('a) option) { h = fun x -> 0 }

let ['a] [H 'a] do_hash = 
  ['a] fun (x : 'a) -> 0

let 
['a 'b] [H 'a, H 'b] 
do_hash2 = 
  ['a 'b] fun (x : 'a) -> fun (y : 'b) -> 0
